crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__binary_expressions-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
lhs * rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Ident("lhs"),
                0..3,
            ),
            Mul,
            Spanned(
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)

--- Errors ---
[]
---
