crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if (true == false) then ("Hello Universe!") else ("Hello World!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Binary(
                    Spanned(
                        Ident("true"),
                        4..8,
                    ),
                    Eq,
                    Spanned(
                        Ident("false"),
                        12..17,
                    ),
                ),
                4..17,
            ),
            then_branch: Spanned(
                String("Hello Universe!"),
                25..42,
            ),
            else_branch: Some(
                Spanned(
                    String("Hello World!"),
                    50..64,
                ),
            ),
        },
        0..65,
    ),
)

--- Errors ---
[]
---
