crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-7.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then print("Hello Universe!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident("true"),
                3..7,
            ),
            then_branch: Spanned(
                Call(
                    Spanned(
                        Ident("print"),
                        13..18,
                    ),
                    [
                        Spanned(
                            String("Hello Universe!"),
                            19..36,
                        ),
                    ],
                ),
                13..37,
            ),
            else_branch: None,
        },
        0..37,
    ),
)

--- Errors ---
[]
---
