crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__record_expressions-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
.{ name: "Record", fields: todo() }
---

Some(
    Spanned(
        Record {
            name: None,
            fields: [
                (
                    Spanned(
                        "name",
                        3..7,
                    ),
                    Spanned(
                        String("Record"),
                        9..17,
                    ),
                ),
                (
                    Spanned(
                        "fields",
                        19..25,
                    ),
                    Spanned(
                        Call(
                            Spanned(
                                Ident("todo"),
                                27..31,
                            ),
                            [],
                        ),
                        27..33,
                    ),
                ),
            ],
        },
        0..35,
    ),
)

--- Errors ---
[]
---
