crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__recover_group-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
( / 888)
---

Some(
    Spanned(
        Error,
        0..8,
    ),
)

--- Errors ---
[
    ParseError {
        span: 2..3,
        reason: ExpectedFound {
            expected: [
                Expression,
            ],
            found: Some(
                Slash,
            ),
        },
    },
]
---
