crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__simple_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
func_name(2, "Do stuff!!", true)
---

Some(
    Spanned(
        Call(
            Spanned(
                Ident("func_name"),
                0..9,
            ),
            [
                Spanned(
                    Int(2),
                    10..11,
                ),
                Spanned(
                    String("Do stuff!!"),
                    13..25,
                ),
                Spanned(
                    Ident("true"),
                    27..31,
                ),
            ],
        ),
        0..32,
    ),
)

--- Errors ---
[]
---
